[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sre-incident-commander"
version = "1.0.0"
description = "Autonomous Site Reliability Engineering & Root Cause Analysis Benchmark"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "requests",
    "openai"
]